# toddric-rag

./: .gitignore  Makefile  Makefile.bak  README.md  fact_files  facts-o-todd  pyproject.toml  read_Wiki  requirements.txt
eval/: memory_quiz.jsonl  profile_quiz.jsonl
profile/: bio.md  faq.jsonl  timeline.md  wiki-todd-mccaffrey.txt
rag/: __init__.py  answer.py  build.py  chunkers.py  config.yaml  db.py  embeddings.py  eval.py  gate.py  ingest.py  pull_wiki.py  retrieve.py  server.py  stats.py
tests/: test_placeholder.py
